# desarrollo-ubuntu

./: README.md  book.xml  capitulo-introduccion.xml
ContactsSharp/: ContactsSharp.sln  ContactsSharp.userprefs  Makefile.am  Makefile.in  Packages.mdproj  autogen.sh  configure.ac
ContactsSharp/ContactsSharp/: AboutDialog.cs  AssemblyInfo.cs  ConfirmDialog.cs  ContactsManager.cs  ContactsSharp.csproj  Defines.cs.in  Main.cs  MainWindow.cs  Makefile.am  Makefile.in  app.desktop  contacts-sharp.desktop  contacts-sharp.desktop.in  contacts-sharp.in
ContactsSharp/ContactsSharpTranslation/: ContactsSharpTranslation.mdproj  Makefile.am  Makefile.in  en.po  es.po  messages.po
ContactsSharp/debian/: README.Debian  changelog  contactssharp.default.ex  contactssharp.doc-base.EX  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
ContactsSharp/help/: Makefile.am  Makefile.in
ContactsSharp/help/C/: contactssharp.xml
calculadora/: Makefile.am  configure.in
calculadora/src/: calcu.c
filesplitter-java/: .classpath  .project  build.xml
filesplitter-java/resources/: FileSplitter.properties  empty.properties  (+1 more)
libro/: CYGWIN-COMO.txt  Makefile  capitulo-empaquetar.xml  capitulo-introduccion.xml  capitulo-launchpad.xml  capitulo-python-glade.xml  libro.xml
privatewiki-0.1/: README.txt  build.xml
warfox-0.1/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
(+74 files in other folders)
