include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = contactssharp
DOC_ENTITIES =
DOC_INCLUDES = legal.xml
DOC_FIGURES = 	figures/hipo.png \
		figures/add_playlist.png	\
		figures/device_properties.png	\
		figures/filter_search.png	\
		figures/remove_song.png		\
		figures/track_properties.png

DOC_LINGUAS = en es
